fixed happy client card on small screen

--- a/components/ImportantDragon/ImportantDragon.module.scss
+++ b/components/ImportantDragon/ImportantDragon.module.scss
@@ -99,7 +99,6 @@
                         font-style: normal;
                         font-weight: 400;
                         font-family: "Poppins";
-                        font-size: 6px;
                         right: 29%;
                         font-size: $smTextSizeMinimum;
                     }
